<resources>
    <string name="app_name">WordReminder</string>
    <string name="add">추가</string>
    <string name="delete">삭제</string>
    <string name="change">변경</string>
    <string name="set">설정</string>
    <string name="save">저장</string>
    <string name="start">시작</string>
    <string name="load">로드</string>
    <string name="no_save">저장 안함</string>
    <string name="cancel">취소</string>
    <string name="close">닫기</string>
    <string name="reset">초기화</string>
    <string name="detailed_word_adapter_relation"><![CDATA[<i>(%2$s)</i> <b>%1$s</b>]]></string>
    <string name="meanings_adapter_pronunciation"><![CDATA[<b>발음:</b> %1$s]]></string>
    <string name="meanings_adapter_example"><![CDATA[<b>예문:</b> %1$s]]></string>
    <string name="meanings_adapter_tags"><![CDATA[<b>태그:</b> %1$s]]></string>
    <string name="relations_adapter_relation"><![CDATA[<b>관계:</b> %1$s]]></string>
    <string name="tags_adapter_count">단어 %1$d개, 뜻 %2$d개</string>
    <string name="tags_adapter_open_words">이 태그를 가진 단어/뜻 보기</string>
    <string name="vocabulary_list_adapter_open">단어장 보기</string>
    <string name="words_adapter_relations"><![CDATA[<b>관계:</b> %1$s]]></string>
    <string name="words_adapter_relation"><![CDATA[<i>(%2$s)</i> <b>%1$s</b>]]></string>
    <string name="question_type_word_to_meaning_message">다음 단어의 뜻은?</string>
    <string name="question_type_meaning_to_word_message">다음 뜻을 가진 단어는?</string>
    <string name="question_type_multiple_choice_error_empty_answer">정답을 선택해 주세요.</string>
    <string name="question_type_short_answer_error_empty_answer">정답을 입력해 주세요.</string>
    <string name="detailed_vocabulary_activity_title">단어장 보기</string>
    <string name="detailed_vocabulary_activity_empty_words">단어장이 비어있습니다.</string>
    <string name="detailed_vocabulary_activity_search">단어 검색하기</string>
    <string name="detailed_vocabulary_activity_search_hint">검색...</string>
    <string name="detailed_vocabulary_activity_edit_vocabulary">단어장 수정하기</string>
    <string name="detailed_vocabulary_activity_hide_word">단어 가리기</string>
    <string name="detailed_vocabulary_activity_hide_meanings">뜻 가리기</string>
    <string name="detailed_vocabulary_activity_hide_hints">힌트 가리기</string>
    <string name="main_activity_title">단어장 목록</string>
    <string name="main_activity_menu_delete">단어장 삭제하기</string>
    <string name="main_activity_ask_delete_vocabulary">단어장을 정말 삭제할까요? 삭제된 단어장은 복구할 수 없습니다.</string>
    <string name="main_activity_menu_rename">단어장 이름 바꾸기</string>
    <string name="main_activity_menu_export">단어장 내보내기</string>
    <string name="main_activity_success_export_vocabulary">단어장을 내보냈습니다.</string>
    <string name="main_activity_error_export_vocabulary">오류가 발생해 단어장을 내보내지 못했습니다.</string>
    <string name="main_activity_menu_about">앱 정보</string>
    <string name="main_activity_current_version">현재 버전</string>
    <string name="main_activity_developer_blog">개발자 블로그</string>
    <string name="main_activity_error_read_vocabulary_list">오류가 발생해 단어장 목록을 불러오지 못했습니다.</string>
    <string name="main_activity_error_write_vocabulary_list">오류가 발생해 단어장 목록을 저장하지 못했습니다.</string>
    <string name="main_activity_empty_vocabulary_list">단어장이 없습니다.</string>
    <string name="main_activity_add_vocabulary">단어장 추가하기</string>
    <string name="main_activity_require_vocabulary_name">단어장의 이름을 입력해 주세요.</string>
    <string name="main_activity_error_empty_vocabulary_name">이름은 비어있을 수 없습니다.</string>
    <string name="main_activity_error_duplicated_vocabulary_name">이미 존재하는 이름입니다.</string>
    <string name="main_activity_create_vocabulary">단어장 만들기</string>
    <string name="main_activity_import_vocabulary">단어장 불러오기</string>
    <string name="main_activity_warning_has_unreadable_containers">더 높은 버전의 WordReminder에서 만들어진 단어장입니다.</string>
    <string name="main_activity_ask_load_vocabulary_which_has_unreadable_containers">정말 이 단어장을 불러올까요? 이 단어장을 불러오면 일부 정보가 손실된 채로 불러와지나, 원본 단어장 파일에서 정보가 손실되지는 않습니다.</string>
    <string name="main_activity_import_vocabulary_error">오류가 발생해 단어장을 불러오지 못했습니다.</string>
    <string name="main_activity_remind_word">단어 암기하기</string>
    <string name="main_activity_question_types">문제 유형</string>
    <string name="main_activity_question_type_word_to_meaning">단어 보고 뜻 맞히기</string>
    <string name="main_activity_question_type_word_to_meaning_sa">단어 보고 뜻 맞히기 (단답형)</string>
    <string name="main_activity_question_type_meaning_to_word">뜻 보고 단어 맞히기</string>
    <string name="main_activity_question_type_meaning_to_word_sa">뜻 보고 단어 맞히기 (단답형)</string>
    <string name="main_activity_question_error_not_selected_question_types">문제 유형을 적어도 하나는 선택해야 합니다.</string>
    <string name="main_activity_question_options">문제 옵션</string>
    <string name="main_activity_question_option_display_pronunciation">발음 표시하기</string>
    <string name="main_activity_question_option_display_example">예문 표시하기</string>
    <string name="main_activity_question_option_disable_duplication">최대한 중복 문제 피하기</string>
    <string name="main_activity_question_option_select_tags">암기할 태그 선택하기</string>
    <string name="main_activity_tags_hint">태그를 선택하세요.</string>
    <string name="main_activity_selected_tags">선택된 태그: %1$s</string>
    <string name="question_activity_title">단어 암기하기</string>
    <string name="question_activity_error_create_question">오류가 발생해 문제를 생성하지 못했습니다.</string>
    <string name="question_activity_hint_pronunciation"><![CDATA[<b>발음:</b> %1$s]]></string>
    <string name="question_activity_hint_example"><![CDATA[<b>예문:</b> %1$s]]></string>
    <string name="question_activity_short_answer_hint">정답...</string>
    <string name="question_activity_stop">중단</string>
    <string name="question_activity_skip">스킵</string>
    <string name="question_activity_summit">다음</string>
    <string name="question_activity_error_wrong_answer">오답입니다.</string>
    <string name="question_activity_vocabulary_for_wrong_answers">%1$s의 오답노트 %2$s</string>
    <string name="question_activity_error_save_vocabulary_for_wrong_answers">오류가 발생해 오답노트를 저장하지 못했습니다.</string>
    <string name="question_activity_success_save_vocabulary_for_wrong_answers">오답노트를 저장했습니다.</string>
    <string name="relations_activity_title">관계 관리하기</string>
    <string name="relations_activity_title_edited">관계 관리하기 *</string>
    <string name="relations_activity_delete_relation">관계 삭제하기</string>
    <string name="relations_activity_ask_delete_relation">관계를 정말 삭제할까요? 삭제된 관계는 복구할 수 없으며, 관련된 단어는 삭제되지 않습니다.</string>
    <string name="relations_activity_change_word">관련된 단어 바꾸기</string>
    <string name="relations_activity_rename_relation">관계 이름 바꾸기</string>
    <string name="relations_activity_require_relation">관계 이름을 입력해 주세요.</string>
    <string name="relations_activity_error_empty_relation">관계 이름은 비어있을 수 없습니다.</string>
    <string name="relations_activity_relations"><![CDATA[<b>%1$s의 관계 목록</b> (%2$d개)]]></string>
    <string name="relations_activity_empty_relations">관계가 없습니다.</string>
    <string name="relations_activity_new_relation_relation">관계 이름...</string>
    <string name="relations_activity_select_word">%1$s의 %2$s 관계의 단어 선택하기</string>
    <string name="relations_activity_selectable_words"><![CDATA[<b>선택 가능한 단어 목록</b> (%2$d개)]]></string>
    <string name="relations_activity_meanings"><![CDATA[<b>%2$s의 뜻 목록</b> (%3$d개)]]></string>
    <string name="relations_activity_meanings_empty"><![CDATA[<b>뜻 목록</b>]]></string>
    <string name="tag_manager_activity_title">태그 매니저</string>
    <string name="tag_manager_activity_title_edited">태그 매니저 *</string>
    <string name="tag_manager_activity_delete_tag">태그 삭제하기</string>
    <string name="tag_manager_activity_ask_delete_tag">태그를 정말 삭제할까요? 삭제된 태그는 복구할 수 없으며, 태그에 포함된 단어와 뜻은 삭제되지 않습니다.</string>
    <string name="tag_manager_activity_rename_tag">태그 이름 바꾸기</string>
    <string name="tag_manager_activity_require_tag_name">태그 이름을 입력해 주세요.</string>
    <string name="tag_manager_activity_error_empty_tag">태그 이름은 비어있을 수 없습니다.</string>
    <string name="tag_manager_activity_error_duplicated_tag">이미 존재하는 태그 이름입니다.</string>
    <string name="tag_manager_activity_tags"><![CDATA[<b>%1$s의 태그 목록</b> (%2$d개)]]></string>
    <string name="tag_manager_activity_empty_tags">태그가 없습니다.</string>
    <string name="tag_manager_activity_words_and_meanings_with_tag">%1$s 태그를 가진 단어/뜻 목록</string>
    <string name="tag_manager_activity_words_with_tag"><![CDATA[<b>단어 목록</b> (%2$d개)]]></string>
    <string name="tag_manager_activity_meanings_with_tag"><![CDATA[<b>%2$s의 뜻 목록</b> (%3$d개)]]></string>
    <string name="tag_manager_activity_meanings_with_tag_empty"><![CDATA[<b>뜻 목록</b>]]></string>
    <string name="tag_manager_activity_new_tag_name_hint">새 태그 이름...</string>
    <string name="vocabulary_activity_title">단어장 수정하기</string>
    <string name="vocabulary_activity_title_edited">단어장 수정하기 *</string>
    <string name="vocabulary_activity_warning_not_saved_vocabulary">저장되지 않은 변경 사항이 있습니다.</string>
    <string name="vocabulary_activity_ask_save_vocabulary">변경 사항을 저장할까요?</string>
    <string name="vocabulary_activity_error_restore_vocabulary">오류가 발생해 저장되지 않은 변경 사항을 되돌리지 못했습니다.</string>
    <string name="vocabulary_activity_search">단어 검색하기</string>
    <string name="vocabulary_activity_search_hint">검색...</string>
    <string name="vocabulary_activity_save_vocabulary">단어장 저장하기</string>
    <string name="vocabulary_activity_success_save_vocabulary">변경 사항을 모두 저장했습니다.</string>
    <string name="vocabulary_activity_error_save_vocabulary">오류가 발생해 변경 사항을 저장하지 못했습니다.</string>
    <string name="vocabulary_activity_delete_word_or_meaning">단어 또는 뜻 삭제하기</string>
    <string name="vocabulary_activity_delete_word">단어 삭제하기</string>
    <string name="vocabulary_activity_ask_delete_word">단어를 정말 삭제할까요?</string>
    <string name="vocabulary_activity_delete_meaning">뜻 삭제하기</string>
    <string name="vocabulary_activity_ask_delete_meaning">뜻을 정말 삭제할까요?</string>
    <string name="vocabulary_activity_ask_delete_last_meaning">뜻을 정말 삭제할까요? 단어도 함께 삭제됩니다.</string>
    <string name="vocabulary_activity_replace_word">단어 바꾸기</string>
    <string name="vocabulary_activity_require_word">단어를 입력해 주세요.</string>
    <string name="vocabulary_activity_error_empty_word">단어는 비어있을 수 없습니다.</string>
    <string name="vocabulary_activity_error_duplicated_word">이미 존재하는 단어입니다.</string>
    <string name="vocabulary_activity_manage_relations">관계 관리하기</string>
    <string name="vocabulary_activity_replace_meaning">뜻 바꾸기</string>
    <string name="vocabulary_activity_require_meaning">뜻을 입력해 주세요.</string>
    <string name="vocabulary_activity_error_empty_meaning">뜻은 비어있을 수 없습니다.</string>
    <string name="vocabulary_activity_error_duplicated_meaning">이미 존재하는 뜻입니다.</string>
    <string name="vocabulary_activity_set_hints">힌트/태그 설정하기</string>
    <string name="vocabulary_activity_warning_pronunciation_equals_word">단어와 발음이 같습니다. 호환성을 위해 발음 데이터가 없는 것으로 취급됩니다.</string>
    <string name="vocabulary_activity_tag_manager">태그 매니저</string>
    <string name="vocabulary_activity_words"><![CDATA[<b>%1$s의 단어 목록</b> (%2$d개)]]></string>
    <string name="vocabulary_activity_words_search_result"><![CDATA[<b>%1$s의 검색 결과</b> (%2$d개)]]></string>
    <string name="vocabulary_activity_meanings"><![CDATA[<b>%2$s의 뜻 목록</b> (%3$d개)]]></string>
    <string name="vocabulary_activity_meanings_empty"><![CDATA[<b>뜻 목록</b>]]></string>
    <string name="vocabulary_activity_add_meaning">단어/뜻 추가하기</string>
    <string name="vocabulary_activity_word">단어*</string>
    <string name="vocabulary_activity_word_hint">단어...</string>
    <string name="vocabulary_activity_meaning">뜻*</string>
    <string name="vocabulary_activity_meaning_hint">뜻...</string>
    <string name="vocabulary_activity_pronunciation">발음</string>
    <string name="vocabulary_activity_pronunciation_hint">발음...</string>
    <string name="vocabulary_activity_example">예문</string>
    <string name="vocabulary_activity_example_hint">예문...</string>
    <string name="vocabulary_activity_tags">태그</string>
    <string name="vocabulary_activity_tags_hint">태그를 선택하세요.</string>
</resources>