<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchWord"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/vocabulary_activity_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/vocabulary_activity_save_vocabulary"
        android:visible="false"
        app:showAsAction="always" />
    <group
        android:id="@+id/wordEditMenus"
        android:visible="false">
        <item
            android:id="@+id/deleteWordOrMeaning"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/vocabulary_activity_delete_word_or_meaning"
            app:showAsAction="always" />
        <item
            android:id="@+id/replaceWord"
            android:title="@string/vocabulary_activity_replace_word"
            app:showAsAction="never" />
        <item
            android:id="@+id/deleteWord"
            android:title="@string/vocabulary_activity_delete_word"
            app:showAsAction="never" />
        <item
            android:id="@+id/manageRelations"
            android:title="@string/vocabulary_activity_manage_relations" />
    </group>
    <group
        android:id="@+id/meaningEditMenus"
        android:visible="false">
        <item
            android:id="@+id/replaceMeaning"
            android:title="@string/vocabulary_activity_replace_meaning"
            app:showAsAction="never" />
        <item
            android:id="@+id/deleteMeaning"
            android:title="@string/vocabulary_activity_delete_meaning"
            app:showAsAction="never" />
        <item
            android:id="@+id/setHints"
            android:title="@string/vocabulary_activity_set_hints"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/tagManager"
        android:title="@string/vocabulary_activity_tag_manager"
        app:showAsAction="never" />
</menu>