<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/editMenus"
        android:visible="false">
        <item
            android:id="@+id/delete"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/main_activity_menu_delete"
            app:showAsAction="always" />
        <item
            android:id="@+id/rename"
            android:title="@string/main_activity_menu_rename"
            app:showAsAction="never" />
        <item
            android:id="@+id/export"
            android:title="@string/main_activity_menu_export"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/about"
        android:title="@string/main_activity_menu_about"
        app:showAsAction="never" />
</menu>