<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedVocabularyActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/words"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/hideWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/emptyWordsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_vocabulary_activity_empty_words"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/words"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/words"
        tools:visibility="visible" />

    <CheckBox
        android:id="@+id/hideWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="4dp"
        android:onClick="onHideWordClick"
        android:text="@string/detailed_vocabulary_activity_hide_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/hideMeanings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:onClick="onHideMeaningsClick"
        android:text="@string/detailed_vocabulary_activity_hide_meanings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hideWord" />

    <CheckBox
        android:id="@+id/hideHints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:onClick="onHideHintsClick"
        android:text="@string/detailed_vocabulary_activity_hide_hints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hideMeanings" />

</androidx.constraintlayout.widget.ConstraintLayout>